# Flight_System

./: .env.example  .gitignore  .pre-commit-config.yaml  API_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.scheduler  Dockerfile.streamlit  Dockerfile.worker  Flight_Analysis_Presentation_Content.md  ML_IMPLEMENTATION_SUMMARY.md  PRESENTATION_SUMMARY.md  README.md  SUBMISSION_OUTLINE.md  SYSTEM_DOCUMENTATION.md  Screenshot_Guide.md  TASK_4_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  alembic.ini  app.py  demo_data_pipeline.py  demo_excel_processor.py  demo_web_scraper.py  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  fix_imports.py  generate_demo_data.py  init.sql  init_database.py  install_dependencies.py  kill_streamlit.py  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  setup_local_db.py  simple_dashboard.py  start_dashboard.py
.github/workflows/: cd.yml  ci.yml  release.yml
.kiro/specs/flight-scheduling-analysis/: requirements.md  tasks.md
config/: haproxy.cfg  nginx.conf  prometheus.yml  redis.conf
docs/: redis_cache_documentation.md
examples/: cache_usage_example.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: backup.sh  cli.py  db_manager.py  deploy.ps1  deploy.sh  health-check.sh  test_influxdb_setup.py  test_redis_integration.py
src/: __init__.py  config.py
src/analysis/: __init__.py  cascading_impact_analyzer.py  congestion_analyzer.py  delay_analyzer.py  schedule_impact_analyzer.py
src/api/: __init__.py  main.py  middleware.py  models.py
src/api/routers/: __init__.py  analysis.py  data.py  health.py  nlp.py  reports.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py  main.py
src/dashboard/components/: __init__.py  auth.py  navigation.py  nlp_interface.py  reporting.py
src/dashboard/page_modules/: __init__.py  congestion_analysis.py  delay_analysis.py  home.py  nlp_interface.py  schedule_impact.py
src/dashboard/utils/: __init__.py  session.py
src/dashboard/visualizations/: __init__.py  congestion_charts.py  delay_charts.py  network_graphs.py  schedule_charts.py
src/database/: README.md  __init__.py  connection.py  influxdb_client.py  models.py  operations.py  query_optimizer.py  redis_client.py  setup_influxdb.py  time_series_ingestion.py  time_series_models.py  time_series_utils.py  utils.py
src/ml/: __init__.py  anomaly_detector.py  delay_predictor.py  feature_engineering.py  model_evaluator.py  time_series_forecaster.py
src/nlp/: README.md  __init__.py  context_manager.py  intent_recognizer.py  langchain_orchestrator.py  query_processor.py  response_generator.py
src/reporting/: __init__.py  export_manager.py  models.py  report_generator.py  scheduler.py  templates.py
src/reporting/templates/: generic_report.html
src/security/: security_hardening.py
src/utils/: __init__.py  alerts.py  cache.py  cache_config.py  cache_monitor.py  cache_strategies.py  load_balancer.py  log_analyzer.py  logger.py  logging.py  logging_config.py  metrics.py
tests/: __init__.py  test_analysis_integration.py  test_anomaly_detector.py  test_api_health.py  test_api_main.py  test_api_middleware.py  test_api_models.py  test_cache.py  test_cache_unit.py  test_cascading_impact_analyzer.py  test_config.py  test_congestion_analyzer.py  test_dashboard_visualizations.py  test_data_endpoints.py  test_data_processors.py  test_database.py  test_delay_analyzer.py  test_delay_predictor.py  test_influxdb.py  test_langchain_orchestrator.py  test_monitoring.py  test_nlp_basic.py  test_nlp_query_processor.py  test_pipeline.py  test_reporting.py  test_reporting_integration.py  test_reports_api.py  test_response_generator.py  test_response_generator_simple.py  test_schedule_impact_analyzer.py  test_scrapers.py  test_time_series_forecaster.py
tests/integration/: test_end_to_end.py
tests/performance/: load_test.py  locustfile.py  test_database_performance.py
